@@ -249,6 +249,11 @@ def runreport(fp):
             select distinct r._Refs_key, rtrim(i.figureLabel) as figureLabel
             from refs r, IMG_Image i
             where r._Refs_key = i._Refs_key
+            and not exists (select 1 from BIB_Workflow_Tag wt, VOC_Term t
+                where b._refs_key = wt._refs_key
+                and wt._tag_key = t._term_key
+                and t.term in ('GXD:PoorImageQuality')
+            )
             order by figureLabel
             ''', 'auto')
     fLabels = {}
