@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-25-22
+DATE: 05/29/2025
+STAFF: lec
+wts2-1671/e4g-273/GXD Papers Requiring Images QC tweak
+        modified:   GXD_Images.py
+
 TAG: qcreports_db-6-0-25-21
 DATE: 05/14/2025
 STAFF: lec
